--- a/src/optim/CMakeLists.txt
+++ b/src/optim/CMakeLists.txt
@@ -16,3 +16,6 @@ COLMAP_ADD_TEST(progressive_sampler_test progressive_sampler_test.cc)
 COLMAP_ADD_TEST(random_sampler_test random_sampler_test.cc)
 COLMAP_ADD_TEST(ransac_test ransac_test.cc)
 COLMAP_ADD_TEST(support_measurement_test support_measurement_test.cc)
+COLMAP_ADD_TEST(LRTsac_test LRTsac_test.cc)
+COLMAP_ADD_TEST(preemptive_LRTsac_test preemptive_LRTsac_test.cc)
+COLMAP_ADD_TEST(LO_LRTsac_test LO_LRTsac_test.cc)
