added D_LRTsac and all the symmetric errors in homography, fundamental and essential

--- a/src/optim/CMakeLists.txt
+++ b/src/optim/CMakeLists.txt
@@ -19,3 +19,4 @@ COLMAP_ADD_TEST(support_measurement_test support_measurement_test.cc)
 COLMAP_ADD_TEST(LRTsac_test LRTsac_test.cc)
 COLMAP_ADD_TEST(preemptive_LRTsac_test preemptive_LRTsac_test.cc)
 COLMAP_ADD_TEST(LO_LRTsac_test LO_LRTsac_test.cc)
+COLMAP_ADD_TEST(D_LRTsac_test D_LRTsac_test.cc)
